# Orvyn

./: .gitignore  Cargo.toml  docker-compose.yml  package-lock.json  package.json  understandings.md
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/auth/callback/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/editor/[id]/: page.tsx
apps/web/src/app/editor/new/: page.tsx
apps/web/src/components/editor/: CodeEditor.tsx
apps/web/src/hooks/: useWebSocket.ts
apps/web/src/stores/: authStore.ts  editorStore.ts
crates/orvyn-chains/: Cargo.toml
crates/orvyn-compiler/: Cargo.toml
crates/orvyn-compiler/src/: lib.rs
crates/orvyn-core/: Cargo.toml
crates/orvyn-core/src/traits/: compiler.rs  deployer.rs  mod.rs  verifier.rs
crates/orvyn-core/src/types/: chain.rs  contract.rs  job.rs  mod.rs
crates/orvyn-sdk-rust/: Cargo.toml
crates/orvyn-wallet/: Cargo.toml
docs/: codebase_architecture.md  compilation_pipeline.md  deployment architecture.md  developer_experience.md  roadmap.md  techstacks.md
services/api-gateway/: Cargo.toml
services/api-gateway/migrations/: 20240304000000_init.sql
services/api-gateway/src/: error.rs  main.rs  router.rs  state.rs
services/api-gateway/src/routes/: compile.rs  deploy.rs  health.rs  mod.rs  projects.rs  ws.rs
services/compiler-service/: Cargo.toml
services/compiler-service/src/: main.rs
services/deployer-service/: Cargo.toml
services/gas-oracle/: Cargo.toml
services/verifier-service/: Cargo.toml
