[workspace]
members = [
    "services/*",
    "crates/*"
]
resolver = "2"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
axum         = { version = "0.7", features = ["macros"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sqlx         = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid"] }
uuid         = { version = "1", features = ["v4", "serde"] }
tracing      = "0.1"
anyhow       = "1"
thiserror    = "1"
async-trait  = "0.1"
