[package]
name = "orvyn-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
orvyn-core = { path = "../orvyn-core" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde_json = { workspace = true }
