[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
orvyn-core = { path = "../../crates/orvyn-core" }
chrono = "0.4.44"
uuid = { workspace = true }
thiserror = { workspace = true }
