[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
orvyn-core = { path = "../../crates/orvyn-core" }
orvyn-compiler = { path = "../../crates/orvyn-compiler" }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
