[package]
name = "compiler-service"
version = "0.1.0"
edition = "2024"

[dependencies]
orvyn-core = { path = "../../crates/orvyn-core" }
orvyn-compiler = { path = "../../crates/orvyn-compiler" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
